force-app/main/default/objects/Opportunity/fields/Score_Customer_s_needs_understood__c.field-meta.xml
<CustomField>
    <fullName>Score_Customer_s_needs_understood__c</fullName>
    <description>User Story ID: 70
Used to calculate the score of the opportunity and set probability %</description>
    <formula>CASE( Customer_s_needs_understood__c  , &quot;Yes&quot;, 3, &quot;Working on it&quot;, 1,0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Score - Customer&apos;s needs understood?</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>