force-app/main/default/objects/Opportunity/fields/Score_Decision_criteria_confirmed__c.field-meta.xml
<CustomField>
    <fullName>Score_Decision_criteria_confirmed__c</fullName>
    <description>User Story ID: 70
Used to calculate the score of the opportunity and set probability %</description>
    <formula>CASE( Decision_criteria_confirmed__c , &quot;Yes&quot;, 2, &quot;Working on it&quot;, 1,0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Score - Decision criteria confirmed?</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>