force-app/main/default/objects/Opportunity/fields/Score_Intent_to_buy__c.field-meta.xml
<CustomField>
    <fullName>Score_Intent_to_buy__c</fullName>
    <description>User Story ID: 70
Used to calculate the score of the opportunity and set probability %</description>
    <formula>CASE( Intent_to_buy__c , &quot;Yes&quot;, 4, &quot;Working on it&quot;, 2,0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Score - Intent to buy?</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>