force-app/main/default/objects/Opportunity/fields/Score_Knowledge_about_customer_s_prior__c.field-meta.xml
<CustomField>
    <fullName>Score_Knowledge_about_customer_s_prior__c</fullName>
    <description>User Story ID: 70
Used to calculate the score of the opportunity and set probability %</description>
    <formula>CASE( Knowledge_about_customer_s_priorities__c , &quot;Yes&quot;, 3, &quot;Working on it&quot;, 1,0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Score - Knowledge about customer&apos;s prior</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>