force-app/main/default/objects/Opportunity/fields/Score_Value_proposition_shared__c.field-meta.xml
<CustomField>
    <fullName>Score_Value_proposition_shared__c</fullName>
    <description>User Story ID: 70
Used to calculate the score of the opportunity and set probability %</description>
    <formula>CASE( Value_proposition_shared__c  , &quot;Yes&quot;, 10, &quot;Working on it&quot;, 5,0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Score - Value proposition shared?</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>