force-app/main/default/objects/Opportunity/fields/Segment__c.field-meta.xml
<CustomField>
    <fullName>Segment__c</fullName>
    <description>User Story ID: 47,48,49 Used for Reporting</description>
    <formula>TEXT(Account.Segment__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Segment</label>
    <type>Text</type>
</CustomField>