force-app/main/default/objects/Opportunity/fields/Shortlisting_confirmed__c.field-meta.xml
<CustomField>
    <fullName>Shortlisting_confirmed__c</fullName>
    <description>User Story ID: 70
Used for Opportunity scoring. This question is part of the Negotiation stage</description>
    <inlineHelpText>Has it been conformed that we are shortlisted for this deal?</inlineHelpText>
    <label>Shortlisting confirmed?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Telia_Opportunity_Scoring_options</valueSetName>
    </valueSet>
</CustomField>