force-app/main/default/objects/Opportunity/fields/Situation__c.field-meta.xml
<CustomField>
    <fullName>Situation__c</fullName>
    <description>User story ID: 70. A traffic light depicting Green, Yellow or Red to show how mature the opportunity is on the &quot;Situation&quot; Checkpoint category</description>
    <formula>IMAGE( 
CASE(( Score_Decision_criteria_confirmed__c + Score_Customer_s_needs_understood__c + Score_Competitors_identified__c ), 
15, &quot;/img/samples/light_green.gif&quot;, 
0, &quot;/img/samples/light_red.gif&quot;, 
&quot;/img/samples/light_yellow.gif&quot;),&quot;Status&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>How well are we doing on understanding the Situation?</inlineHelpText>
    <label>Situation</label>
    <type>Text</type>
</CustomField>