force-app/main/default/objects/Opportunity/fields/Solution__c.field-meta.xml
<CustomField>
    <fullName>Solution__c</fullName>
    <description>User story ID: 70. A traffic light depicting Green, Yellow or Red to show how mature the opportunity is on the &quot;Solution&quot; Checkpoint category</description>
    <formula>IMAGE( 
CASE(( Score_Technical_requirements_met__c +  Score_Good_fit__c +Score_Risks_mitigated__c ), 
14, &quot;/img/samples/light_green.gif&quot;, 
0, &quot;/img/samples/light_red.gif&quot;, 
&quot;/img/samples/light_yellow.gif&quot;),&quot;Status&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>How well are we doing on developing the Solution?</inlineHelpText>
    <label>Solution</label>
    <type>Text</type>
</CustomField>