force-app/main/default/objects/Opportunity/fields/Special_Term__c.field-meta.xml
<CustomField>
    <fullName>Special_Term__c</fullName>
    <description>Internal field used in process builder &apos; Renewal Opportunity&apos; to set special terms as reflected on previous quote on renewal quote</description>
    <label>Special Term</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>