force-app/main/default/objects/Opportunity/fields/Subscription_Term__c.field-meta.xml
<CustomField>
    <fullName>Subscription_Term__c</fullName>
    <description>Internal field to set Subscription term on renewal opportunities used on renewal quote</description>
    <label>Subscription Term</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>