force-app/main/default/objects/Opportunity/fields/Target__c.field-meta.xml
<CustomField>
    <fullName>Target__c</fullName>
    <description>User Story ID: 47,48,49
The sales target is the amount a rep is to close for a given period. The field is only set on Target opportunities.</description>
    <inlineHelpText>The Sales Target the rep is to achieve</inlineHelpText>
    <label>Sales Target</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>