force-app/main/default/objects/Opportunity/fields/Team_Member_SalesSpecialist_Count__c.field-meta.xml
<CustomField>
    <fullName>Team_Member_SalesSpecialist_Count__c</fullName>
    <defaultValue>0</defaultValue>
    <description>Numer of Sales Specialist team members</description>
    <label>Team Member SalesSpecialist Count</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>