force-app/main/default/objects/Opportunity/fields/Technical_requirements_met__c.field-meta.xml
<CustomField>
    <fullName>Technical_requirements_met__c</fullName>
    <description>User Story ID: 70
Used for Opportunity scoring. This question is part of the Qualification stage</description>
    <inlineHelpText>Can we meet the customer&apos;s technical requirements for this particular deal?</inlineHelpText>
    <label>Technical requirements met?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Telia_Opportunity_Scoring_options</valueSetName>
    </valueSet>
</CustomField>