force-app/main/default/objects/Opportunity/fields/Telia_investment_expected__c.field-meta.xml
<CustomField>
    <fullName>Telia_investment_expected__c</fullName>
    <description>User Story ID: 70
Used for Opportunity scoring. This question is part of the Needs Analysis stage</description>
    <inlineHelpText>Is this deal associated with an investment from our side?</inlineHelpText>
    <label>Telia investment expected?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Telia_Opportunity_Scoring_options</valueSetName>
    </valueSet>
</CustomField>