force-app/main/default/objects/Opportunity/fields/ValidationCheck__c.field-meta.xml
<CustomField>
    <fullName>ValidationCheck__c</fullName>
    <label>ValidationCheck</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Start</fullName>
                <default>true</default>
                <label>Start</label>
            </value>
            <value>
                <fullName>Success</fullName>
            </value>
            <value>
                <fullName>Error</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>