force-app/main/default/objects/Opportunity/fields/Value__c.field-meta.xml
<CustomField>
    <fullName>Value__c</fullName>
    <description>User story ID: 70. A traffic light depicting Green, Yellow or Red to show how mature the opportunity is on the &quot;Value&quot; Checkpoint category</description>
    <formula>IMAGE( 
CASE(( Score_Knowledge_about_customer_s_prior__c + Score_Value_proposition_shared__c + Score_Awaiting_CXO_acceptance__c ), 
23, &quot;/img/samples/light_green.gif&quot;, 
0, &quot;/img/samples/light_red.gif&quot;, 
&quot;/img/samples/light_yellow.gif&quot;),&quot;Status&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>How well are we doing on communicating the Value?</inlineHelpText>
    <label>Value</label>
    <type>Text</type>
</CustomField>