force-app/main/default/objects/Opportunity/fields/Value_proposition_shared__c.field-meta.xml
<CustomField>
    <fullName>Value_proposition_shared__c</fullName>
    <description>User Story ID: 70
Used for Opportunity scoring. This question is part of the Proposal stage</description>
    <inlineHelpText>Is our ability to deliver value shared by the decision makers?</inlineHelpText>
    <label>Value proposition shared?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Telia_Opportunity_Scoring_options</valueSetName>
    </valueSet>
</CustomField>