force-app/main/default/objects/Opportunity/fields/Verbal__c.field-meta.xml
<CustomField>
    <fullName>Verbal__c</fullName>
    <description>User Story ID: 70
Used for Opportunity scoring. This question is part of the Negotiation stage</description>
    <inlineHelpText>Has the customer verbally accepted our proposal?</inlineHelpText>
    <label>Verbally accepted?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Telia_Opportunity_Scoring_options</valueSetName>
    </valueSet>
</CustomField>