force-app/main/default/objects/Opportunity/fields/Win_Reason__c.field-meta.xml
<CustomField>
    <fullName>Win_Reason__c</fullName>
    <description>User story ID: 45</description>
    <inlineHelpText>The reason we won the business</inlineHelpText>
    <label>Win Reason</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>StageName</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Our relation to the customer</fullName>
            </value>
            <value>
                <fullName>Our understanding of the customers situation</fullName>
            </value>
            <value>
                <fullName>Our understanding of the process</fullName>
            </value>
            <value>
                <fullName>Our solution</fullName>
            </value>
            <value>
                <fullName>Our ability to deliver value</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>