force-app/main/default/objects/Opportunity/recordTypes/Read_only_for_Renewal.recordType-meta.xml
<RecordType>
    <fullName>Read_only_for_Renewal</fullName>
    <active>true</active>
    <businessProcess>Telia Enterprise</businessProcess>
    <description>Read only opportunity type for Renewal Quote preperation code</description>
    <label>Read only for Renewal</label>
</RecordType>