force-app/main/default/objects/Opportunity/recordTypes/Sales_other_channels.recordType-meta.xml
<RecordType>
    <fullName>Sales_other_channels</fullName>
    <active>true</active>
    <businessProcess>Telia Enterprise</businessProcess>
    <description>Record type to hold sales from other sales channels than sales rep (eg. service or selfservice portal)</description>
    <label>Sales other channels</label>
</RecordType>