force-app/main/default/objects/Opportunity/recordTypes/Target.recordType-meta.xml
<RecordType>
    <fullName>Target</fullName>
    <active>true</active>
    <businessProcess>Target</businessProcess>
    <description>Used for setting sales targets</description>
    <label>Target</label>
</RecordType>