force-app/main/default/objects/Opportunity/validationRules/Can_not_reopen_Closed_Won_opportunity.validationRule-meta.xml
<ValidationRule>
    <fullName>Can_not_reopen_Closed_Won_opportunity</fullName>
    <active>true</active>
    <description>An opportunity in stage Closed Won is not allowed to be reopened.</description>
    <errorConditionFormula>AND(
ISCHANGED(StageName),
ISPICKVAL(PRIORVALUE(StageName), &quot;Closed Won&quot;),
ISPICKVAL(PRIORVALUE( ValidationCheck__c), &quot;Success&quot;)
)</errorConditionFormula>
    <errorMessage>You are not allowed to change the stage of a closed won opportunity.</errorMessage>
</ValidationRule>