force-app/main/default/objects/Opportunity/validationRules/Competitor_Other_missing.validationRule-meta.xml
<ValidationRule>
    <fullName>Competitor_Other_missing</fullName>
    <active>false</active>
    <description>If Other is chosen as a Competitor - the name of the Competitor must be entered</description>
    <errorConditionFormula>ISPICKVAL(Lost_to_Competitor__c, &apos;Other&apos;) &amp;&amp;  ISBLANK( Other_Competitor__c)</errorConditionFormula>
    <errorMessage>Please enter a Competitor in the Other Competitor field</errorMessage>
</ValidationRule>