force-app/main/default/objects/Opportunity/validationRules/Complexity_mandatory_in_some_stages.validationRule-meta.xml
<ValidationRule>
    <fullName>Complexity_mandatory_in_some_stages</fullName>
    <active>true</active>
    <description>If opportunity is complex and the stage is changed to Proposal, Negotiation, Close Agreement or Closed Won Complexity must be selected</description>
    <errorConditionFormula>Case_Handover_Active__c = true  &amp;&amp; 
RecordType.DeveloperName = &apos;Sales&apos; &amp;&amp;
ISCHANGED( StageName ) &amp;&amp;
Complex_Opportunity__c = true &amp;&amp;
Complex_Configuration_Network_Setup__c = false &amp;&amp; 
Complex_Pricing_Contractual__c = false &amp;&amp;
Complex_Size_of_Order__c = false &amp;&amp;
(ISPICKVAL( StageName, &apos;Proposal&apos;) ||
 ISPICKVAL( StageName, &apos;Negotiation&apos;) ||
 ISPICKVAL( StageName, &apos;Close Agreement&apos;) ||
 ISPICKVAL( StageName, &apos;Closed Won&apos;))</errorConditionFormula>
    <errorMessage>Please pick a complexity type before changing stage.</errorMessage>
</ValidationRule>