force-app/main/default/objects/Opportunity/validationRules/Do_not_skip_stage_Proposal.validationRule-meta.xml
<ValidationRule>
    <fullName>Do_not_skip_stage_Proposal</fullName>
    <active>true</active>
    <description>It should not be possible to skip stage Proposal, as this will also skip credit evaluation.</description>
    <errorConditionFormula>RecordType.DeveloperName = &apos;Sales&apos; &amp;&amp;
ISCHANGED( StageName ) &amp;&amp;
ISPICKVAL( PRIORVALUE(StageName), &apos;Needs Analysis&apos;) &amp;&amp;
!ISPICKVAL( StageName, &apos;Proposal&apos;) &amp;&amp;
!ISPICKVAL( StageName, &apos;Closed Lost&apos;)</errorConditionFormula>
    <errorMessage>It is not allowed to skip Proposal, as this will prevent credit evaluation.</errorMessage>
</ValidationRule>