force-app/main/default/objects/Opportunity/validationRules/IoT_and_Fleet_in_separate_opportunities.validationRule-meta.xml
<ValidationRule>
    <fullName>IoT_and_Fleet_in_separate_opportunities</fullName>
    <active>true</active>
    <description>IoT and Fleet products must always be in opportunities with no other products.</description>
    <errorConditionFormula>!ISNEW() &amp;&amp;
ISCHANGED(Product_s_in_scope__c) &amp;&amp; 
INCLUDES(Product_s_in_scope__c, &apos;IoT&apos;)</errorConditionFormula>
    <errorMessage>IoT Connectivity / Fleet Management can NOT be selected with other products.</errorMessage>
</ValidationRule>