force-app/main/default/objects/Opportunity/validationRules/Opportunity_Stage_Cannot_be_Closed.validationRule-meta.xml
<ValidationRule>
    <fullName>Opportunity_Stage_Cannot_be_Closed</fullName>
    <active>true</active>
    <errorConditionFormula>ISPICKVAL(StageName,&quot;Closed&quot;)</errorConditionFormula>
    <errorMessage>Stage cannot be Closed (Select Close Won or Closed Lost instead).</errorMessage>
</ValidationRule>