force-app/main/default/objects/Opportunity/validationRules/Primary_Quote_must_be_approved.validationRule-meta.xml
<ValidationRule>
    <fullName>Primary_Quote_must_be_approved</fullName>
    <active>true</active>
    <description>If there is a related Primary Quote or Original Primary Quote, one of them needs to be approved if opportunity stage is Closed Won. System Administrator profile excluded.</description>
    <errorConditionFormula>AND(
ISCHANGED(StageName), 
ISPICKVAL(StageName, &quot;Closed Won&quot;),
NOT($User.ProfileId = $Label.System_Administrator_Profile_Id),
OR(
 AND(
  NOT(
   ISBLANK( Original_Primary_Quote__c )),
  NOT( ISPICKVAL( Original_Primary_Quote__r.ApprovalStatus__c , 
       &quot;Approved&quot;) )),
 AND(
  ISBLANK( Original_Primary_Quote__c),
  NOT(
   ISBLANK(  SBQQ__PrimaryQuote__c  )),
  NOT( ISPICKVAL(   SBQQ__PrimaryQuote__r.ApprovalStatus__c  , 
       &quot;Approved&quot;) )))
)</errorConditionFormula>
    <errorMessage>Primary Quote must be approved before you can save this opportunity as Closed Won. Please submit your quote for approval.</errorMessage>
</ValidationRule>