force-app/main/default/objects/Opportunity/validationRules/Primary_Quote_must_have_lines.validationRule-meta.xml
<ValidationRule>
    <fullName>Primary_Quote_must_have_lines</fullName>
    <active>true</active>
    <description>If there is a related Primary Quote or Original Primary Quote, one of them needs to have at least one line item if opportunity stage is Closed Won.</description>
    <errorConditionFormula>AND(
ISPICKVAL(StageName, &quot;Closed Won&quot;),
OR(
 AND(
  NOT(
   ISBLANK( Original_Primary_Quote__c )),
  NOT( Original_Primary_Quote__r.SBQQ__LineItemCount__c &gt;= 1 )),
 AND(
  ISBLANK( Original_Primary_Quote__c),
  NOT(
   ISBLANK(  SBQQ__PrimaryQuote__c  )),
  NOT( SBQQ__PrimaryQuote__r.SBQQ__LineItemCount__c &gt;= 1 )))
)</errorConditionFormula>
    <errorMessage>Primary Quote must have at least 1 Quote Line before you can save this opportunity as Closed Won.</errorMessage>
</ValidationRule>