force-app/main/default/objects/Opportunity/validationRules/Secure_that_PriceBook_is_always_set.validationRule-meta.xml
<ValidationRule>
    <fullName>Secure_that_PriceBook_is_always_set</fullName>
    <active>true</active>
    <errorConditionFormula>Pricebook2Id = NULL &amp;&amp;
 SBQQ__PrimaryQuote__c  &lt;&gt; NULL</errorConditionFormula>
    <errorDisplayField>Pricebook2Id</errorDisplayField>
    <errorMessage>You&apos;re too fast to create quote and no PriceBook has therefor been defined on Opportunity ;) Please edit and click save to force PriceBook to be defined - if issue still ecounters please contact your salesforce admin</errorMessage>
</ValidationRule>